Add header HTML content

--- a/index.html
+++ b/index.html
@@ -25,7 +25,25 @@
                 <li>Privacy</li>
             </ul>
         </div>
-
+        <div class="header">
+            <div class="top">
+                <form>
+                    <button>Search</button>
+                    <input type="text">
+                </form>
+                <button>Notification</button>
+                Profile Pic
+                Morgan Oakley
+            </div>
+           <div class="bottom">
+                Profile Pic
+                <p>Hi there,</p>
+                <p>Morgan Oakley (@morgan)</p>
+                <button>New</button>
+                <button>Upload</button>
+                <button>Share</button>
+           </div>
+        </div>
     </div>
 </body>
 </html>
