Add basic grid styles

--- a/index.html
+++ b/index.html
@@ -27,13 +27,11 @@
         </div>
         <div class="header">
             <div class="top">
-                <form>
-                    <button>Search</button>
-                    <input type="text">
-                </form>
-                <button>Notification</button>
-                Profile Pic
-                Morgan Oakley
+                <button class="search">Search</button>
+                <input class="bar" type="text">
+                <button class="bell">Notification</button>
+                <p class="profilepic">Profile Pic</p>
+                <p class="naming">Morgan Oakley</p>
             </div>
            <div class="bottom">
                 Profile Pic
@@ -43,6 +41,9 @@
                 <button>Upload</button>
                 <button>Share</button>
            </div>
+        </div>
+        <div class="main">
+            Your projects
         </div>
     </div>
 </body>
