Add sidebar icons

--- a/index.html
+++ b/index.html
@@ -10,24 +10,24 @@
 <body>
     <div class="container"> 
         <div class="sidebar">
-            Dashboard
+            <img src="./icons/view-dashboard.svg" width="36px" class="ico-white"> Dashboard
             <ul>
-                <li>Home</li>
-                <li>Profile</li>
-                <li>Messages</li>
-                <li>History</li>
-                <li>Tasks</li>
-                <li>Communities</li>
+                <li><img src="./icons/home.svg" class="ico-white"> Home</li>
+                <li><img src="./icons/card-account-details.svg" class="ico-white"> Profile</li>
+                <li><img src="./icons/message-reply.svg" class="ico-white"> Messages</li>
+                <li><img src="./icons/clock-time-three.svg" class="ico-white"> History</li>
+                <li><img src="./icons/note-multiple.svg" class="ico-white"> Tasks</li>
+                <li><img src="./icons/account-group.svg" class="ico-white"> Communities</li>
             </ul>
             <ul>
-                <li>Settings</li>
-                <li>Support</li>
-                <li>Privacy</li>
+                <li><img src="./icons/cog.svg" class="ico-white"> Settings</li>
+                <li><img src="./icons/help-box.svg" class="ico-white">Support</li>
+                <li><img src="./icons/shield-check.svg" class="ico-white">Privacy</li>
             </ul>
         </div>
         <div class="header">
             <div class="top">
-                <button class="search">Search</button>
+                <img src="./icons/magnify.svg" width="24px"/>
                 <input class="bar" type="text">
                 <button class="bell">Notification</button>
                 <p class="profilepic">Profile Pic</p>
