Add styles for searchbar

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
         </div>
         <div class="header">
             <div class="top">
-                <img src="./icons/magnify.svg" width="24px"/>
+                <img src="./icons/magnify.svg" width="24px" class="search"/>
                 <input class="bar" type="text">
-                <button class="bell">Notification</button>
-                <p class="profilepic">Profile Pic</p>
-                <p class="naming">Morgan Oakley</p>
+                <img src="./icons/bell-ring-outline.svg" width="24px" class="bell">
+                <img src="./icons/profilepic.png" class="profilepic">
+                <p class="naming">Kevin Chaires</p>
             </div>
            <div class="bottom">
                 Profile Pic
