Add header style

--- a/index.html
+++ b/index.html
@@ -34,12 +34,14 @@
                 <p class="naming">Kevin Chaires</p>
             </div>
            <div class="bottom">
-                Profile Pic
-                <p>Hi there,</p>
-                <p>Morgan Oakley (@morgan)</p>
-                <button>New</button>
-                <button>Upload</button>
-                <button>Share</button>
+                <img src="./icons/profilepic.png" class="bigimage">
+                <div class="welcome">
+                    <p class="hello">Hi there,</p>
+                    <p class="salute">Kevin Chaires (@kevin)</p>
+                </div>
+                <button class="blue">New</button>
+                <button class="blue">Upload</button>
+                <button class="blue">Share</button>
            </div>
         </div>
         <div class="main">
