Add announcements style

--- a/index.html
+++ b/index.html
@@ -45,7 +45,44 @@
            </div>
         </div>
         <div class="main">
-            Your projects
+            <p>Your Projects</p>
+
+            <div class="rightbar">
+                <h3>Announcements</h3>
+                <div class="board">
+                    <div class="announce">
+                        <h4>Site Maintenance</h4>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                            Id repudiandae quibusdam totam, odit explicabo voluptatibus
+                            nesciunt laudantium et mollitia debitis sed impedit ipsam non
+                            in perspiciatis hic necessitatibus, asperiores fuga?</p>
+                    </div>
+                    <div class="divider"></div>
+                    <div class="announce">
+                        <h4>Community Share Day</h4>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                            Id repudiandae quibusdam totam, odit explicabo voluptatibus
+                            nesciunt laudantium et mollitia debitis sed impedit ipsam non
+                            in perspiciatis hic necessitatibus, asperiores fuga?</p>
+                    </div>
+                    <div class="divider"></div>
+                    <div class="announce">
+                        <h4>Updated Privacy Policy</h4>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                            Id repudiandae quibusdam totam, odit explicabo voluptatibus
+                            nesciunt laudantium et mollitia debitis sed impedit ipsam non
+                            in perspiciatis hic necessitatibus, asperiores fuga?</p>
+                    </div>
+                </div>
+                <h2>Trending</h2>
+                <div class="board trending">
+                    <div class="trend-item">
+                        <img src="./icons/profilepic.png" class="profiletrend">
+                        <p>@tegan</p>
+                        <p>World Peace Builder</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
