Style trending area

--- a/index.html
+++ b/index.html
@@ -77,9 +77,24 @@
                 <h2>Trending</h2>
                 <div class="board trending">
                     <div class="trend-item">
-                        <img src="./icons/profilepic.png" class="profiletrend">
-                        <p>@tegan</p>
-                        <p>World Peace Builder</p>
+                        <img src="./icons/profilepic.png" class="trend-profile">
+                        <div class="trend-user">@tegan</div>
+                        <div class="trend-content">World Peace Builder</div>
+                    </div>
+                    <div class="trend-item">
+                        <img src="./icons/profilepic.png" class="trend-profile">
+                        <div class="trend-user">@morgan</div>
+                        <div class="trend-content">Super Cool Project</div>
+                    </div>
+                    <div class="trend-item">
+                        <img src="./icons/profilepic.png" class="trend-profile">
+                        <div class="trend-user">@kendall</div>
+                        <div class="trend-content">Life Changing App</div>
+                    </div>
+                    <div class="trend-item">
+                        <img src="./icons/profilepic.png" class="trend-profile">
+                        <div class="trend-user">@alex</div>
+                        <div class="trend-content">No Traffic Maker</div>
                     </div>
                 </div>
             </div>
