--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container"> 
         <div class="sidebar">
-            <img src="./icons/view-dashboard.svg" width="36px" class="ico-white"> Dashboard
+            <img src="./icons/view-dashboard.svg" width="36px" class="ico-white"> <h2>Dashboard</h2>
             <ul>
                 <li><img src="./icons/home.svg" class="ico-white"> Home</li>
                 <li><img src="./icons/card-account-details.svg" class="ico-white"> Profile</li>
@@ -45,10 +45,15 @@
            </div>
         </div>
         <div class="main">
-            <p>Your Projects</p>
+            <h3>Your Projects</h3>
+            <div class="main-content">
+                <p>test</p>
+            </div>
 
             <div class="rightbar">
-                <h3>Announcements</h3>
+                <div class="rightbar-title">
+                    <h3>Announcements</h3>
+                </div>
                 <div class="board">
                     <div class="announce">
                         <h4>Site Maintenance</h4>
