Style main content card

--- a/index.html
+++ b/index.html
@@ -47,7 +47,21 @@
         <div class="main">
             <h3>Your Projects</h3>
             <div class="main-content">
-                <p>test</p>
+                <div class="mainboard">
+                    <div class="mainboard-color"></div>
+                    <div class="mainboard-content">
+                        <h4>Super Cool Project</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Eum repudiandae cumque, quae quos autem nostrum voluptatum
+                            a asperiores doloribus incidunt illo</p>
+                    </div>
+                    <div class="mainboard-links">
+                            <div class="spacing"></div>
+                            <img src="./icons/star-plus-outline.svg" class="mainboard-ico">
+                            <img src="./icons/eye-plus-outline.svg" class="mainboard-ico">
+                            <img src="./icons/share-variant-outline.svg" class="mainboard-ico">
+                    </div>
+                </div>
             </div>
 
             <div class="rightbar">
