Add responsive main card section

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
            </div>
         </div>
         <div class="main">
-            <h3>Your Projects</h3>
+            <h2>Your Projects</h2>
             <div class="main-content">
                 <div class="mainboard">
                     <div class="mainboard-color"></div>
@@ -62,11 +62,86 @@
                             <img src="./icons/share-variant-outline.svg" class="mainboard-ico">
                     </div>
                 </div>
+                <div class="mainboard">
+                    <div class="mainboard-color"></div>
+                    <div class="mainboard-content">
+                        <h4>Less Cool Project</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Eum repudiandae cumque, quae quos autem nostrum voluptatum
+                            a asperiores doloribus incidunt illo</p>
+                    </div>
+                    <div class="mainboard-links">
+                            <div class="spacing"></div>
+                            <img src="./icons/star-plus-outline.svg" class="mainboard-ico">
+                            <img src="./icons/eye-plus-outline.svg" class="mainboard-ico">
+                            <img src="./icons/share-variant-outline.svg" class="mainboard-ico">
+                    </div>
+                </div>
+                <div class="mainboard">
+                    <div class="mainboard-color"></div>
+                    <div class="mainboard-content">
+                        <h4>Impossible App</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Eum repudiandae cumque, quae quos autem nostrum voluptatum
+                            a asperiores doloribus incidunt illo</p>
+                    </div>
+                    <div class="mainboard-links">
+                            <div class="spacing"></div>
+                            <img src="./icons/star-plus-outline.svg" class="mainboard-ico">
+                            <img src="./icons/eye-plus-outline.svg" class="mainboard-ico">
+                            <img src="./icons/share-variant-outline.svg" class="mainboard-ico">
+                    </div>
+                </div>
+                <div class="mainboard">
+                    <div class="mainboard-color"></div>
+                    <div class="mainboard-content">
+                        <h4>Easy Peasy App</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Eum repudiandae cumque, quae quos autem nostrum voluptatum
+                            a asperiores doloribus incidunt illo</p>
+                    </div>
+                    <div class="mainboard-links">
+                            <div class="spacing"></div>
+                            <img src="./icons/star-plus-outline.svg" class="mainboard-ico">
+                            <img src="./icons/eye-plus-outline.svg" class="mainboard-ico">
+                            <img src="./icons/share-variant-outline.svg" class="mainboard-ico">
+                    </div>
+                </div>
+                <div class="mainboard">
+                    <div class="mainboard-color"></div>
+                    <div class="mainboard-content">
+                        <h4>Ad Blocker</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Eum repudiandae cumque, quae quos autem nostrum voluptatum
+                            a asperiores doloribus incidunt illo</p>
+                    </div>
+                    <div class="mainboard-links">
+                            <div class="spacing"></div>
+                            <img src="./icons/star-plus-outline.svg" class="mainboard-ico">
+                            <img src="./icons/eye-plus-outline.svg" class="mainboard-ico">
+                            <img src="./icons/share-variant-outline.svg" class="mainboard-ico">
+                    </div>
+                </div>
+                <div class="mainboard">
+                    <div class="mainboard-color"></div>
+                    <div class="mainboard-content">
+                        <h4>Money Maker</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Eum repudiandae cumque, quae quos autem nostrum voluptatum
+                            a asperiores doloribus incidunt illo</p>
+                    </div>
+                    <div class="mainboard-links">
+                            <div class="spacing"></div>
+                            <img src="./icons/star-plus-outline.svg" class="mainboard-ico">
+                            <img src="./icons/eye-plus-outline.svg" class="mainboard-ico">
+                            <img src="./icons/share-variant-outline.svg" class="mainboard-ico">
+                    </div>
+                </div>
             </div>
 
             <div class="rightbar">
                 <div class="rightbar-title">
-                    <h3>Announcements</h3>
+                    <h2>Announcements</h2>
                 </div>
                 <div class="board">
                     <div class="announce">
