Add responsive trending style

--- a/index.html
+++ b/index.html
@@ -171,24 +171,40 @@
                 <h2>Trending</h2>
                 <div class="board trending">
                     <div class="trend-item">
-                        <img src="./icons/profilepic.png" class="trend-profile">
-                        <div class="trend-user">@tegan</div>
-                        <div class="trend-content">World Peace Builder</div>
+                        <div class="trend-item-pic">
+                            <img src="./icons/profilepic.png" class="trend-profile">
+                        </div>
+                        <div class="trend-item-content">
+                            <div class="trend-user">@chaires</div>
+                            <div class="trend-content">World Peace Builder</div>
+                        </div>
                     </div>
                     <div class="trend-item">
-                        <img src="./icons/profilepic.png" class="trend-profile">
-                        <div class="trend-user">@morgan</div>
-                        <div class="trend-content">Super Cool Project</div>
+                        <div class="trend-item-pic">
+                            <img src="./icons/profilepic.png" class="trend-profile">
+                        </div>
+                        <div class="trend-item-content">
+                            <div class="trend-user">@kevin</div>
+                            <div class="trend-content">Super Cool Project</div>
+                        </div>
                     </div>
                     <div class="trend-item">
-                        <img src="./icons/profilepic.png" class="trend-profile">
-                        <div class="trend-user">@kendall</div>
-                        <div class="trend-content">Life Changing App</div>
+                        <div class="trend-item-pic">
+                            <img src="./icons/profilepic.png" class="trend-profile">
+                        </div>
+                        <div class="trend-item-content">
+                            <div class="trend-user">@ekevin</div>
+                            <div class="trend-content">Life Changing App</div>
+                        </div>
                     </div>
                     <div class="trend-item">
-                        <img src="./icons/profilepic.png" class="trend-profile">
-                        <div class="trend-user">@alex</div>
-                        <div class="trend-content">No Traffic Maker</div>
+                        <div class="trend-item-pic">
+                            <img src="./icons/profilepic.png" class="trend-profile">
+                        </div>
+                        <div class="trend-item-content">
+                            <div class="trend-user">@kevch</div>
+                            <div class="trend-content">No Traffic Maker</div>
+                        </div>
                     </div>
                 </div>
             </div>
