Style sidebar with grid

--- a/index.html
+++ b/index.html
@@ -10,19 +10,18 @@
 <body>
     <div class="container"> 
         <div class="sidebar">
-            <img src="./icons/view-dashboard.svg" width="36px" class="ico-white"> <h2>Dashboard</h2>
-            <ul>
-                <li><img src="./icons/home.svg" class="ico-white"> Home</li>
-                <li><img src="./icons/card-account-details.svg" class="ico-white"> Profile</li>
-                <li><img src="./icons/message-reply.svg" class="ico-white"> Messages</li>
-                <li><img src="./icons/clock-time-three.svg" class="ico-white"> History</li>
-                <li><img src="./icons/note-multiple.svg" class="ico-white"> Tasks</li>
-                <li><img src="./icons/account-group.svg" class="ico-white"> Communities</li>
-            </ul>
-            <ul>
-                <li><img src="./icons/cog.svg" class="ico-white"> Settings</li>
-                <li><img src="./icons/help-box.svg" class="ico-white">Support</li>
-                <li><img src="./icons/shield-check.svg" class="ico-white">Privacy</li>
+                <img src="./icons/view-dashboard.svg" width="36px" class="ico-white">
+                <h2>Dashboard</h2>    
+                <img src="./icons/home.svg" class="ico-white"> Home
+                <img src="./icons/card-account-details.svg" class="ico-white"> Profile
+                <img src="./icons/message-reply.svg" class="ico-white"> Messages
+                <img src="./icons/clock-time-three.svg" class="ico-white"> History
+                <img src="./icons/note-multiple.svg" class="ico-white"> Tasks
+                <img src="./icons/account-group.svg" class="ico-white"> Communities
+                <div class="sidebar-spacer"></div>
+                <img src="./icons/cog.svg" class="ico-white"> Settings
+                <img src="./icons/help-box.svg" class="ico-white">Support
+                <img src="./icons/shield-check.svg" class="ico-white">Privacy
             </ul>
         </div>
         <div class="header">
