--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container"> 
         <div class="sidebar">
-                <img src="./icons/view-dashboard.svg" width="36px" class="ico-white">
+                <img src="./icons/view-dashboard.svg" width="36px" class="ico-white logo">
                 <h2>Dashboard</h2>    
                 <img src="./icons/home.svg" class="ico-white"> Home
                 <img src="./icons/card-account-details.svg" class="ico-white"> Profile
@@ -171,7 +171,7 @@
                 <div class="board trending">
                     <div class="trend-item">
                         <div class="trend-item-pic">
-                            <img src="./icons/profilepic.png" class="trend-profile">
+                            <img src="./icons/prchaires.png" class="trend-profile">
                         </div>
                         <div class="trend-item-content">
                             <div class="trend-user">@chaires</div>
@@ -189,7 +189,7 @@
                     </div>
                     <div class="trend-item">
                         <div class="trend-item-pic">
-                            <img src="./icons/profilepic.png" class="trend-profile">
+                            <img src="./icons/prkevin.png" class="trend-profile">
                         </div>
                         <div class="trend-item-content">
                             <div class="trend-user">@ekevin</div>
@@ -198,7 +198,7 @@
                     </div>
                     <div class="trend-item">
                         <div class="trend-item-pic">
-                            <img src="./icons/profilepic.png" class="trend-profile">
+                            <img src="./icons/prkevch.png" class="trend-profile">
                         </div>
                         <div class="trend-item-content">
                             <div class="trend-user">@kevch</div>
