--- a/index.html
+++ b/index.html
@@ -10,18 +10,17 @@
 <body>
     <div class="container"> 
         <div class="sidebar">
-                <img src="./icons/view-dashboard.svg" width="36px" class="ico-white logo">
-                <h2>Dashboard</h2>    
-                <img src="./icons/home.svg" class="ico-white"> Home
-                <img src="./icons/card-account-details.svg" class="ico-white"> Profile
-                <img src="./icons/message-reply.svg" class="ico-white"> Messages
-                <img src="./icons/clock-time-three.svg" class="ico-white"> History
-                <img src="./icons/note-multiple.svg" class="ico-white"> Tasks
-                <img src="./icons/account-group.svg" class="ico-white"> Communities
+                <img src="./icons/view-dashboard.svg" width="36px" class="ico-white logo"> <h2>Dashboard</h2>    
+                <img src="./icons/home.svg" class="ico-white"> <a href="#">Home</a>
+                <img src="./icons/card-account-details.svg" class="ico-white"> <a href="#">Profile</a>
+                <img src="./icons/message-reply.svg" class="ico-white"> <a href="#">Messages</a>
+                <img src="./icons/clock-time-three.svg" class="ico-white"> <a href="#">History</a>
+                <img src="./icons/note-multiple.svg" class="ico-white"> <a href="#">Tasks</a>
+                <img src="./icons/account-group.svg" class="ico-white"> <a href="#">Communities</a>
                 <div class="sidebar-spacer"></div>
-                <img src="./icons/cog.svg" class="ico-white"> Settings
-                <img src="./icons/help-box.svg" class="ico-white">Support
-                <img src="./icons/shield-check.svg" class="ico-white">Privacy
+                <img src="./icons/cog.svg" class="ico-white"> <a href="#">Settings</a>
+                <img src="./icons/help-box.svg" class="ico-white"><a href="#">Support</a>
+                <img src="./icons/shield-check.svg" class="ico-white"><a href="#">Privacy</a>
             </ul>
         </div>
         <div class="header">
