Fix announce board placement bug

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                 <div class="rightbar-title">
                     <h2>Announcements</h2>
                 </div>
-                <div class="board">
+                <div class="board spacer">
                     <div class="announce">
                         <h4>Site Maintenance</h4>
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.
